# termo

./: .gitignore  PRD.md  README.md  plan_trabajo.md  pyproject.toml  temp_code.py  termal_app.py
